test/success/traits/simple_generic2/main.sk
module B {

pub trait Bar[T] {
    fn bar(&self) -> ()
}

pub fn generic[T: Bar[T]](t: T) {
    t.bar();
}

}

module Main {

import B

struct Foo {

}

instance Foo Bar[Foo] {
    fn bar(&self) -> () {

    }
}

fn main() {
    let f = Foo();
    f.bar();
    generic(f);
}

}