test/errors/dropcheck/parent_moved/main.sk
module Main {

struct Baz {

}

struct Bar {
    baz: Baz,
    baz2: Baz,
}

struct Foo {
    bar: Bar,
    bar2: Bar,
}

fn sink[T](t: T) {}

fn main() {
    let mut f = Foo(Bar(Baz(), Baz()), Bar(Baz(), Baz()));
    sink(f.bar);
    f.bar.baz = Baz();
}

}